[project]
name = "bene-prefs"
version = "0.1.0"
description = "BFD Beneficiary Preferences"
readme = "README.md"
dependencies = [
    "cryptography==45.0.6",
    "snowflake-connector-python==4.3.0",
    "python-dateutil==2.9.0",
    "boto3>=1.42.56",
    "jinja2>=3.1.6",
    "aws-lambda-powertools>=3.25.0",
]

[dependency-groups]
dev = [
    "ruff",
    "uv",
    "pytest",
    "pyright",
]
