[project]
name = "consume-idr-events"
version = "0.1.0"
description = "Lambda to consume IDR load events from the IDR Events SQS Queue into the v3 DB"
readme = "README.md"
dependencies = [
    "boto3>=1.42.56",
    "aws-lambda-powertools>=3.25.0",
    "psycopg[binary]>=3.2.10",
    "pydantic>=2.12.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
