[project]
name = "ccw-manifests-verifier"
version = "1.0.0"
dependencies = [
    "aws-lambda-powertools[all]",
    "boto3",
    "psycopg[binary]",
    "pydantic",
]

[dependency-groups]
dev = ["boto3-stubs[rds,s3,sns]", "ruff", "uv"]

# Inherits all tool configurations from 
# ../../../../pyproject.toml (ops intermediate)
