[project]
name = "cw-to-flattened-json"
version = "1.0.0"
requires-python = ">=3.13"
dependencies = ["boto3"]

[dependency-groups]
dev = ["ruff", "uv"]

[tool.ruff]
# Set the maximum line length to 100.
line-length = 100

[tool.ruff.lint]
select = [
  "D",    # pydocstyle
  "E501",
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  "ANN",
  "LOG",
  "G",
  "PT",
  "RSE",
  "PIE",
  "RET",
  "SLF",
  "ARG",
  "PTH",
  "PLE",
  "PLW",
  "PERF",
  "FURB",
  "RUF",
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pyright]
# ...
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = "none"
# Usage of _some_ of Powertools for AWS Lambda necessitates disabling some of Pyright's strict mode
# features, sadly. The Powertools team seems to be aware of this incompatibility, but it seems
# unlikely that any improvements will be made.
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false


