[project]
# Support Python 3.13+.
requires-python = ">=3.13"
name = "ccw-manifests-verifier"
version = "1.0.0"
dependencies = [
    "aws-lambda-powertools[all]>=3.4.1",
    "boto3>=1.36.3",
    "psycopg[binary]>=3.2.4",
    "pydantic>=2.10.5",
]

[dependency-groups]
dev = [
    "boto3-stubs[rds,s3,sns]>=1.36.3",
    "ruff>=0.9.2",
    "uv>=0.5.22",
]

[tool.ruff]
# Set the maximum line length to 100.
line-length = 100

[tool.ruff.lint]
select = [
    "D",    # pydocstyle
    "E501",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    "ANN",
    "LOG",
    "G",
    "PT",
    "RSE",
    "PIE",
    "RET",
    "SLF",
    "ARG",
    "PTH",
    "PLE",
    "PLW",
    "PERF",
    "FURB",
    "RUF",
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pyright]
# ...
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = "none"
# Usage of _some_ of Powertools for AWS Lambda necessitates disabling some of Pyright's strict mode
# features, sadly. The Powertools team seems to be aware of this incompatibility, but it seems
# unlikely that any improvements will be made.
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false

